@@ -1,0 +1,4 @@
+galpy.orbit.Orbit.plotBruteSOS
+==============================
+
+.. automethod:: galpy.orbit.Orbit.plotBruteSOS
